<resources>
    <string name="app_name">uDecide</string>

    <string name="facebook_application_id" translatable="false">1992025451036511</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb1992025451036511</string>
    <string name="newPollNotify">Notification when</string>
    <string name="facebook_app_id" translatable="false">1992025451036511</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1992025451036511</string>
    <string name="GenericImageError">Unable to find image</string>
    <string name="newPollCancel">Cancel</string>
    <string name="newPollSave">Save</string>
    <string name="newPollPublic">Public</string>
    <string name="newPollFriends">Friends</string>
    <string name="newPollQuestion">What to decide?</string>
    <string name="newPollPublicOrFreind">Show for</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="menu_myQuestions">My questions</string>
    <string name="menu_newQuestion">New question</string>
    <string name="menu_logout">Log out</string>
    <string name="menu_decide">Decide</string>

    <string name="welcome_message">Welcome to uDecide</string>
    <string name="welcome_info">Feel free to use the menu to navigate</string>

    <string name="offline_message">Missing connection</string>
    <string name="offline_info">It appears that you are offline. Try again later.</string>

    <string name="no_more_polls">No more questions</string>
    <string name="notification_description">Vote alert triggered: </string>
    <string name="FacebookSignInAuthenticationCanceled">Authentication canceled.</string>
    <string name="FacebookSignInAuthenticationError">Authentication error.</string>
    <string name="FirebaseSignInAuthenticationFailed">Authentication failed.</string>
    <string name="Loading">Loading</string>
    <string name="reset_decider">Reset decider</string>
    <string name="PROVIDE_IMAGE_MSG">You need to provide two images</string>
    <string name="PROVIDE_QUESTION_MSG">You need to enter a question</string>
    <string name="POLL_CREATED_MSG">Your poll is created</string>
    <string name="FAILURE_MSG">Something went wrong</string>

</resources>