<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/SBAmountDec"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dk.au.ase.itsmap.e17.appproject.gruppe7.udecide.NewPollActivity"
    tools:layout_editor_absoluteY="81dp">

    <ImageView
        android:id="@+id/IWDecitionOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:cropToPadding="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SBNotify"
        app:srcCompat="@drawable/common_full_open_on_phone" />

    <ImageView
        android:id="@+id/IWDecition2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toTopOf="@+id/BTNSaveDec"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IWDecitionOne"
        app:srcCompat="@drawable/common_full_open_on_phone" />

    <Button
        android:id="@+id/BTNSaveDec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/newPollSave"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <SeekBar
        android:id="@+id/SBNotify"
        android:layout_width="248dp"
        android:layout_height="18dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TVNotificationDec" />

    <TextView
        android:id="@+id/TVNotificationDec"
        android:layout_width="247dp"
        android:layout_height="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/TVForP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/newPollPublicOrFreind"
        app:layout_constraintBottom_toTopOf="@+id/TVNotificationDec"
        app:layout_constraintStart_toStartOf="@+id/etQuestion"
        app:layout_constraintTop_toBottomOf="@+id/etQuestion"
        app:layout_constraintVertical_bias="0.612" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="80dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:checkedButton="@+id/RBFreinds"
        app:layout_constraintStart_toEndOf="@+id/TVForP"
        app:layout_constraintTop_toBottomOf="@+id/etQuestion">

        <RadioButton
            android:id="@+id/RBFreinds"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_weight="1"
            android:text="@string/newPollFriends" />

        <RadioButton
            android:id="@+id/RBPublic"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_weight="1"
            android:text="@string/newPollPublic" />

    </RadioGroup>

    <EditText
        android:id="@+id/etQuestion"
        android:layout_width="249dp"
        android:layout_height="42dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/newPollQuestion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/BTNCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@android:string/no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/BTNSaveDec"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
